got simulates answer clicking working

--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,9 @@
     "activeTab",
     "sidePanel"
   ],
+  "host_permissions": [
+    "*://*.blooket.com/*"
+  ],
   "action": {
     "default_title": "Open Solver Sidebar"
   },
